refactor [indexes]: make UpdateTask use lambda
+ instead of 'abstract method' and inheritance -- make `UpdateTask` use lambda as a 'singleItemProcessor', and make an `UpdateTask` itself `final`-class
+ specify duplicates processing as underdefined

GitOrigin-RevId: b173e2725402d70f2b3d983fff4ccca4e1efef58